--- a/Youtube/Youtube_Playlist_Vai_dar_Namoro.ipynb
+++ b/Youtube/Youtube_Playlist_Vai_dar_Namoro.ipynb
@@ -114,7 +114,7 @@
     {
       "cell_type": "code",
       "source": [
-        "youTubeApiKey=\"AIzaSyDZv4KAAbUbpmxkQ7KLvcotHLCV9T4PAAU\""
+        "youTubeApiKey=\"\""
       ],
       "metadata": {
         "id": "UOi4vv_o59Aw"
